# universal_decorators

./: .gitignore  pyproject.toml
.github/workflows/: tests.yml
src/universal_decorator/: __init__.py  decorators.py  metadata.py
tests/: test_decorators.py
