[project]
name = "universal-decorator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sebastian Eibl", email = "sebastian.eibl@mpcdf.mpg.de" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
]

[project.scripts]
universal-decorator = "universal_decorator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
